--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,14 @@ body {
 	margin-top: 20px;
 }
 .center {
-	text-align: center;
+   display: -webkit-flex;
+   display: flex;
+   -webkit-flex-direction: row 
+   flex-direction: row;
+   -webkit-align-items: center;
+   align-items: center;
+   -webkit-justify-content: center;
+   justify-content: center;
 
 }
 input {
@@ -49,7 +56,7 @@ span {
 	font-size: 20px;
 	font-family: 'Open Sans', sans-serif;
 }
-button {
+#verifier {
 	border:2px solid #47b8e0 ;
 	background-color: #34314c;
 	color:#47b8e0 ;
@@ -59,7 +66,18 @@ button {
 	font-family: 'Open Sans', sans-serif;
 
 }
-button:hover{
+#buttonOverlay{
+
+	background-color:#D499B0;
+	color:#9055A2;
+	width: 75px;
+	height: 75px;
+	border-radius: 100px;
+	border: none; 
+
+
+}
+#verifier:hover{
 	background-color:  #47b8e0 ;
 	color: #fff;
 	font-family: 'Open Sans', sans-serif;
